--- a/about.html
+++ b/about.html
@@ -27,8 +27,93 @@
     <img  class="grid-picture" src="https://plus.unsplash.com/premium_photo-1661883964999-c1bcb57a7357?q=80&w=2256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
     <img  class="grid-picture" src="https://images.unsplash.com/photo-1600585153490-76fb20a32601?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
     <img  class="grid-picture" src="https://images.unsplash.com/photo-1571055107559-3e67626fa8be?q=80&w=2231&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
+</div>
 
+
+<div id="featuredCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#featuredCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#featuredCarousel" data-slide-to="1"></li>
+    <li data-target="#featuredCarousel" data-slide-to="2"></li>
+    <li data-target="#featuredCarousel" data-slide-to="3"></li>
+    <li data-target="#featuredCarousel" data-slide-to="5"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt=" Featured Product 1">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 2">
+    </div>
+    <div class="carousel-item">
+      <img src="https://plus.unsplash.com/premium_photo-1661883964999-c1bcb57a7357?q=80&w=2256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 3">
+    </div>
+    <div class="carousel-item">
+      <img src="https://plus.unsplash.com/premium_photo-1661876449499-26de7959878f?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 4">
+      </div>
+    <div class="carousel-item">
+      <img src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?q=80&w=2330&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 5">
+    </div>
   </div>
+  <a class="carousel-control-prev" href="#featuredCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#featuredCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+</div>
+
+
+
+
+
+
+
+  <footer class="footer">
+    <div id="container">
+        <div class="row">
+            <div class="footer-col">
+                <h4>ABOUT</h4>
+                <ul>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Rentals</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>CONTACT</h4>
+                <ul>
+                    <li><a href="#">Payment Options</a></li>
+                    <li><a href="#">Locations</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+        </div>
+        <div class="footer-col">
+            <h4>HOME</h4>
+            <ul>
+                <li><a href="#">About Owners</a></li>
+                <li><a href="#">Hero Page</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
+    </div>
+       
+    <div class="footer-col">
+            <h4>FOLLOW US</h4>
+          <div class="social-links">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>            
+                <a href="#"><i class="fab fa-twitter"></i></a>            
+                <a href="#"><i class="fab fa-instagram"></i></a>            
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>            
+            </div>
+            </div>
+            </div>
+            </div>
+
+          </footer>
 
 
 
@@ -49,9 +134,11 @@
 
 
 
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+  
+          <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
 
   </body>
   </html>
