--- a/about.html
+++ b/about.html
@@ -27,7 +27,11 @@
     <img  class="grid-picture" src="https://plus.unsplash.com/premium_photo-1661883964999-c1bcb57a7357?q=80&w=2256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
     <img  class="grid-picture" src="https://images.unsplash.com/photo-1600585153490-76fb20a32601?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
     <img  class="grid-picture" src="https://images.unsplash.com/photo-1571055107559-3e67626fa8be?q=80&w=2231&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
-</div>
+    
+  </div>
+  <div class="discount">Discount</div>
+
+
 
 
 <div id="featuredCarousel" class="carousel slide" data-ride="carousel">
@@ -40,20 +44,41 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
+      <div class="carousel-caption">
+        <h3>Paris</h3>
+        <p>Book Now</p>
+      </div>
       <img src="https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt=" Featured Product 1">
     </div>
     <div class="carousel-item">
+      <div class="carousel-caption">
+        <h3>Los Angeles</h3>
+        <p>Available Now</p>
+      </div>
       <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 2">
     </div>
     <div class="carousel-item">
+      <div class="carousel-caption">
+        <h3>Berlin</h3>
+        <p>Availale Now</p>
+      </div>
       <img src="https://plus.unsplash.com/premium_photo-1661883964999-c1bcb57a7357?q=80&w=2256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 3">
     </div>
     <div class="carousel-item">
+      <div class="carousel-caption">
+        <h3>Switzerland</h3>
+        <p>Book Now And Get 30% off</p>
+      </div>
       <img src="https://plus.unsplash.com/premium_photo-1661876449499-26de7959878f?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 4">
       </div>
     <div class="carousel-item">
+      <div class="carousel-caption">
+        <h3>Maldives</h3>
+        <p>Available now</p>
+      </div>
       <img src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?q=80&w=2330&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 5">
     </div>
+    
   </div>
   <a class="carousel-control-prev" href="#featuredCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
