--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,14 @@
-<link rel="stylesheet" type="text/css" href="contact.css">
-<form action="submit.feedback" method="post">
-
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contact.css">
+    <title>Contact</title>
+  </head>
+  <body>
+   <div class="container">
+    <form action="submit.feedback" method="post"></form>
     <label for="name">NAME</label>
     <input type="text" id="name" name="name" required>
 
@@ -14,3 +22,10 @@
     <input type="submit" value="submit">
     
 </form>
+</div>
+    
+  </body>
+  </html>
+   
+
+  
