--- a/rentals.html
+++ b/rentals.html
@@ -8,7 +8,17 @@
   <link rel="stylesheet" type="text/css" href="rentals.css">
 </head>
 <body>
-  
+  <nav class="navbar">
+    <input type="text" />
+
+    <input type="color" />
+    <input type="file" />
+    <input type="number" />
+    <input type="datetime-local" />
+    <input type="radio" />
+    <input type="checkbox" />
+    </div>
+  </nav>
   
 
 <div class="row align-items-center content">
