--- a/rentals.html
+++ b/rentals.html
@@ -9,15 +9,14 @@
 </head>
 <body>
   <nav class="navbar">
-    <input type="text" />
-
-    <input type="color" />
-    <input type="file" />
-    <input type="number" />
-    <input type="datetime-local" />
-    <input type="radio" />
-    <input type="checkbox" />
-    </div>
+    <form class="form-inline ml-auto">
+    <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
+  </form>
+    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+    <input class="number" type="number" />
+    <input class="date" type="datetime-local" />
+   
+    
   </nav>
   
 
