--- a/rentals.html
+++ b/rentals.html
@@ -10,10 +10,15 @@
 <body>
   <nav class="navbar">
     <form class="form-inline ml-auto">
+      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
-  </form>
-    <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+  
+</form>
+        <h5>Guests</h5>
     <input class="number" type="number" />
+    <h5>Check In</h5>
+    <input class="date" type="datetime-local" />
+    <h5>Check Out</h5>
     <input class="date" type="datetime-local" />
    
     
