added some touches

--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 <body>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <img src="https://cdn.vectorstock.com/i/1000x1000/03/17/real-estate-houses-logo-vector-23770317.webp" alt="logo" class="logo">
     <button class="click">Log In</button>
     <input class="text" type="text" placeholder="Email"></input>
     <input class="text" type="text" placeholder="Password"></input>
@@ -24,9 +25,17 @@
 
   <div class="grid">
    <img  class="grid-picture" src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?q=80&w=2192&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-1" />
+   <button class="btn-1">BOOK NOW</button>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut velit voluptatibus cumque. Voluptatum, dolorum. Esse ducimus, hic veniam, porro officia odio dolorum nesciunt sequi earum labore iure veritatis ab pariatur.</p>
     <img  class="grid-picture" src="https://plus.unsplash.com/premium_photo-1661883964999-c1bcb57a7357?q=80&w=2256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
+    <button class="btn-1">BOOK NOW</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut velit voluptatibus cumque. Voluptatum, dolorum. Esse ducimus, hic veniam, porro officia odio dolorum nesciunt sequi earum labore iure veritatis ab pariatur.</p>
     <img  class="grid-picture" src="https://images.unsplash.com/photo-1600585153490-76fb20a32601?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
+    <button class="btn-1">BOOK NOW</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut velit voluptatibus cumque. Voluptatum, dolorum. Esse ducimus, hic veniam, porro officia odio dolorum nesciunt sequi earum labore iure veritatis ab pariatur.</p>
     <img  class="grid-picture" src="https://images.unsplash.com/photo-1571055107559-3e67626fa8be?q=80&w=2231&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="apartment-2" />
+    <button class="btn-1">BOOK NOW</button>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut velit voluptatibus cumque. Voluptatum, dolorum. Esse ducimus, hic veniam, porro officia odio dolorum nesciunt sequi earum labore iure veritatis ab pariatur.</p>
     
     
   </div>
