--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link type="text/css" rel="stylesheet" href="about.css">
+    <link type="text/css" rel="stylesheet" href="contact.css">
     <script src="https://kit.fontawesome.com/3e6aa8ad6e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="card">
-        <h2>FEEDBACK CARD</h2>
+        <h2>FEEDBACK FORM</h2>
         <form action="Submit-Feedback">
             <p>
                 <label for="Name">Enter Name:</label>
