--- a/vacation.html
+++ b/vacation.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="expandme">
             <div class="navbar-nav">
                 
-           <a href="About" class="nav-item nav-link">ABOUT</a>
+           <a href="Home" class="nav-item nav-link">HOME</a>
            <a href="Rentals" class="nav-item nav-link">RENTALS</a>
            <a href="Contact.html" class="nav-item nav-link">CONTACT</a>
         </div>
