--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <title>Product Gallery</title>
-  <link type="text/css" rel="stylesheet" href="about.css">
+  <link type="text/css" rel="stylesheet" href="home.css">
   <script src="https://kit.fontawesome.com/3e6aa8ad6e.js" crossorigin="anonymous"></script>
 </head>
 <body>
