--- a/home.html
+++ b/home.html
@@ -11,7 +11,9 @@
 <body>
 
   <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <div class="logo">
     <img src="https://cdn.vectorstock.com/i/1000x1000/03/17/real-estate-houses-logo-vector-23770317.webp" alt="logo" class="logo">
+  </div>
     <button class="click">Log In</button>
     <input class="text" type="text" placeholder="Email"></input>
     <input class="text" type="text" placeholder="Password"></input>
@@ -57,35 +59,35 @@
     <div class="carousel-item active">
       <div class="carousel-caption">
         <h3>Paris</h3>
-        <p>Book Now</p>
+        <button class="BN-1">Book Now</button>
       </div>
       <img src="https://images.unsplash.com/photo-1505843513577-22bb7d21e455?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt=" Featured Product 1">
     </div>
     <div class="carousel-item">
       <div class="carousel-caption">
         <h3>Los Angeles</h3>
-        <p>Available Now</p>
+        <button class="BN-1">Book Now</button>
       </div>
       <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 2">
     </div>
     <div class="carousel-item">
       <div class="carousel-caption">
         <h3>Berlin</h3>
-        <p>Availale Now</p>
+        <button class="BN-1">Book Now</button>
       </div>
       <img src="https://plus.unsplash.com/premium_photo-1661883964999-c1bcb57a7357?q=80&w=2256&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 3">
     </div>
     <div class="carousel-item">
       <div class="carousel-caption">
         <h3>Switzerland</h3>
-        <p>Book Now And Get 30% off</p>
+        <button class="BN-1">Book Now</button>
       </div>
       <img src="https://plus.unsplash.com/premium_photo-1661876449499-26de7959878f?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 4">
       </div>
     <div class="carousel-item">
       <div class="carousel-caption">
         <h3>Maldives</h3>
-        <p>Available now</p>
+        <button class="BN-1">Book Now</button>
       </div>
       <img src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?q=80&w=2330&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 5">
     </div>
@@ -142,8 +144,8 @@
           <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>            
                 <a href="#"><i class="fab fa-twitter"></i></a>            
-                <a href="#"><i class="fab fa-instagram"></i></a>            
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>            
+                <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>            
+                <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>            
             </div>
             </div>
             </div>
