--- a/rentals.html
+++ b/rentals.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rentals</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="rentals.css">
+  <title>Rentals</title>
 </head>
 <body>
-  <nav class="navbar">
+  <nav class="navbar navbar-expand-md navbar-dark bg-firebrick sticky-top">
     <form class="form-inline ml-auto">
       <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
     <input class="form-control mr-sm-2" type="search" placeholder="search" aria-label="Search">
@@ -92,6 +92,41 @@
                         <img src="https://images.pexels.com/photos/4968510/pexels-photo-4968510.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="" class="img-fluid">        
                      </div>
                     </div>
+
+                    <div class="row align-items-center content">
+                      <div class="col-md-6 mt-5">
+                         <img src="https://images.unsplash.com/photo-1558036117-15d82a90b9b1?q=80&w=2340&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="img-fluid">        
+                      </div>
+                       <div class="col-md-6 text-center">
+                         <div class="row justify-content-center mb-md-5">
+                        <div class="col-10 col-lg-8  bash mb-5">
+                            <h2>FIELD HOUSE</h2>
+                           <img src="" alt="" class="">
+                            <p class="lead">Ocean view house waking up to the freshest air and amazing view of the ocean,Have your morning coffee right infront of the ocean with some peace and tranguility.</p>
+                            <button class="best">Book Now</button>
+                           <p>PRICE: 150 EURO/NIGHT</p>  
+                            
+                        
+                        </div>
+                       </div>
+                        </div>
+                      </div>
+
+                      <div class="row align-items-center content">
+                        <div class="col-md-6 text-center">
+                           <div class="row justify-content-center">
+                          <div class="col-10 col-lg-8 bash mb-8 mb-md-8 mt-8 ">
+                              <h2 class="lead">MARBLE HOUSE</h2>
+                          <p>Best Place for large families who want enough space for everyone and full luxury.</p>
+                          <button class="best">Book Now</button>
+                          <p>PRICE: 200 EURO/NIGHT</p>
+                         </div>
+                         </div>
+                          </div>
+                          <div class="col-md-6 mt-5" >
+                            <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="img-fluid">        
+                         </div>
+                        </div>
 
 
 
