--- a/rentals.html
+++ b/rentals.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="rentals.css">
   <title>Rentals</title>
+  <script src="https://kit.fontawesome.com/3e6aa8ad6e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-firebrick sticky-top">
@@ -130,6 +131,47 @@
 
 
 
+                        <footer class="footer">
+                          <div id="container">
+                              <div class="row">
+                                  <div class="footer-col">
+                                      <h4>ABOUT</h4>
+                                      <ul>
+                                          <li><a href="#">About us</a></li>
+                                          <li><a href="#">Services</a></li>
+                                          <li><a href="#">Rentals</a></li>
+                                      </ul>
+                                  </div>
+                                  <div class="footer-col">
+                                      <h4>CONTACT</h4>
+                                      <ul>
+                                          <li><a href="#">Payment Options</a></li>
+                                          <li><a href="#">Locations</a></li>
+                                          <li><a href="#">Privacy Policy</a></li>
+                                      </ul>
+                              </div>
+                              <div class="footer-col">
+                                  <h4>HOME</h4>
+                                  <ul>
+                                      <li><a href="#">About Owners</a></li>
+                                      <li><a href="#">Hero Page</a></li>
+                                      <li><a href="#">Services</a></li>
+                                  </ul>
+                          </div>
+                             
+                          <div class="footer-col">
+                                  <h4>FOLLOW US</h4>
+                                <div class="social-links">
+                                      <a href="#"><i class="fab fa-facebook-f"></i></a>            
+                                      <a href="#"><i class="fab fa-twitter"></i></a>            
+                                      <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>            
+                                      <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>            
+                                  </div>
+                                  </div>
+                                  </div>
+                                  </div>
+                      
+                                </footer>
 
 </body>
 </html>
