--- a/home.html
+++ b/home.html
@@ -8,12 +8,18 @@
   <link type="text/css" rel="stylesheet" href="home.css">
   <script src="https://kit.fontawesome.com/3e6aa8ad6e.js" crossorigin="anonymous"></script>
 </head>
-<body>
-
+<body> 
+  
   <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
 
-   <img src="https://cdn.vectorstock.com/i/1000x1000/03/17/real-estate-houses-logo-vector-23770317.webp" 
-   alt="logo" class="logo" />
+     
+    <img src="https://cdn.vectorstock.com/i/1000x1000/03/17/real-estate-houses-logo-vector-23770317.webp" 
+  alt="nav-pic" class="flex" />
+
+   
+  
+
+   
   
     <button class="click">Log In</button>
     <input class="text" type="text" placeholder="Email"></input>
