--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body> 
   
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+  <nav class="navbar navbar-expand-md navbar-dark sticky-top">
 
      
     <img src="https://cdn.vectorstock.com/i/1000x1000/03/17/real-estate-houses-logo-vector-23770317.webp" 
