--- a/rentals.html
+++ b/rentals.html
@@ -47,8 +47,8 @@
             <div class="col-md-6 text-center">
                <div class="row justify-content-center">
               <div class="col-10 col-lg-8 bash mb-5 mb-md-5 mt-5 ">
-                  <h2 class="lead">HILL TOP VILLA</h2>
-              <p>Elegant View from the hill top,with much space for kids to run around and have a good time whiles on vacation.fresh air from the ocean.And a 5 minutes walk to the ocean on a sunny day.</p>
+                  <h2>HILL TOP VILLA</h2>
+              <p class="lead">Elegant View from the hill top,with much space for kids to run around and have a good time whiles on vacation.fresh air from the ocean.And a 5 minutes walk to the ocean on a sunny day.</p>
               <button class="best">Book Now</button>
               <p>PRICE: 100 EURO/NIGHT</p>
              </div>
@@ -128,6 +128,25 @@
                             <img src="https://images.unsplash.com/photo-1564501049412-61c2a3083791?q=80&w=2232&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="img-fluid">        
                          </div>
                         </div>
+
+                        <div class="row align-items-center content">
+                          <div class="col-md-6 mt-5">
+                             <img src="https://images.unsplash.com/photo-1416331108676-a22ccb276e35?q=80&w=2334&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" class="img-fluid">        
+                          </div>
+                           <div class="col-md-6 text-center">
+                             <div class="row justify-content-center mb-md-5">
+                            <div class="col-10 col-lg-8  bash mb-5">
+                                <h2>MEXICAN STYLE</h2>
+                               <img src="" alt="" class="">
+                                <p class="lead">Ocean view house waking up to the freshest air and amazing view of the ocean,Have your morning coffee right infront of the ocean with some peace and tranguility.</p>
+                                <button class="best">Book Now</button>
+                               <p>PRICE: 150 EURO/NIGHT</p>  
+                                
+                            
+                            </div>
+                           </div>
+                            </div>
+                          </div>
 
 
 
