--- a/vacation.html
+++ b/vacation.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-md navbar-dark sticky-top">
         <a class="navbar-brand" href="#"> <i class="fa-solid fa-house fa-xl"></i> LUXURY RENTALS</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#expandme">
         <span class="navbar-toggler-icon"></span>
