--- a/home.html
+++ b/home.html
@@ -25,6 +25,8 @@
     <input class="text" type="text" placeholder="Email"></input>
     <input class="text" type="text" placeholder="Password"></input>
   </nav>
+
+  <div class="gradient"></div>
      
   <div class="discount">Book Now And Get 30% Off</div>
 
@@ -57,7 +59,7 @@
 
 
 
-
+<div class="gradient"></div>
 <div id="featuredCarousel" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#featuredCarousel" data-slide-to="0" class="active"></li>
@@ -116,13 +118,8 @@
 
 </div>
 
-
-
-
-
-
-
-  <footer class="footer">
+   <div class="gradient"></div>
+   <footer class="footer">
     <div id="container">
         <div class="row">
             <div class="footer-col">
