--- a/vacation.html
+++ b/vacation.html
@@ -31,6 +31,7 @@
           </form>
          </div>
           </nav>
+          <div class="gradient"></div>
           <div class="hero-image">
             <div class="hero-text">
               <h1>LUXURY RENTALS</h1>
@@ -39,7 +40,7 @@
             </div>
           </div>
 
-          
+          <div class="gradient"></div>
           <footer class="footer">
             <div class="container">
                 <div class="row">
