--- a/rentals.html
+++ b/rentals.html
@@ -24,7 +24,7 @@
    
     
   </nav>
-  
+  <div class="gradient"></div>
 
 <div class="row align-items-center content">
     <div class="col-md-6 mb-5 mt-5">
@@ -147,6 +147,8 @@
                            </div>
                             </div>
                           </div>
+
+                          <div class="gradient"></div>
 
 
 
