--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="contact-form">
-  <h2>Contact Us</h2>
+  <h3 class="contact">Contact Us</h3>
   <form id="contactForm">
     <input type="text" id="name" placeholder="Your Name" required>
     <input type="email" id="email" placeholder="Your Email" required>
@@ -45,7 +45,9 @@
    </ul>
  
   <p><small>&copy; 2024 Luxury Apartments. All rights reserved.</small></p>
+  
 </footer>
+<div class="gradient"></div>
 
 <script src="script.js"></script>
 </body>
