--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <div class="gradient"></div>
 <footer>
-  <h2>Luxury Apartments</h2>
+  <h2>Luxury Rentals</h2>
   <ul>
     <li>
       <a href="https://www.linkedin.com/feed/" target="blank">
@@ -44,7 +44,7 @@
     </li>
    </ul>
  
-  <p><small>&copy; 2024 Luxury Apartments. All rights reserved.</small></p>
+  <p><small>&copy; 2024 Luxury Rentals. All rights reserved.</small></p>
   
 </footer>
 <div class="gradient"></div>
