--- a/home.html
+++ b/home.html
@@ -92,14 +92,14 @@
     </div>
     <div class="carousel-item">
       <div class="carousel-caption">
-        <h3>Switzerland</h3>
+        <h3>Maldives</h3>
         <button class="BN-1">Book Now</button>
       </div>
       <img src="https://plus.unsplash.com/premium_photo-1661876449499-26de7959878f?q=80&w=2274&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 4">
       </div>
     <div class="carousel-item">
       <div class="carousel-caption">
-        <h3>Maldives</h3>
+        <h3>Switzerland</h3>
         <button class="BN-1">Book Now</button>
       </div>
       <img src="https://images.unsplash.com/photo-1513584684374-8bab748fbf90?q=80&w=2330&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Featured Product 5">
@@ -152,8 +152,10 @@
           <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>            
                 <a href="#"><i class="fab fa-twitter"></i></a>            
-                <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>            
-                <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>            
+                <a href="https://github.com/" target="blank">
+                  <i class="fa-brands fa-github"></i></a>            
+                <a href="https://www.linkedin.com/feed/" target="blank">
+                  <i class="fab fa-linkedin-in"></i></a>            
             </div>
             </div>
             </div>
