--- a/rentals.html
+++ b/rentals.html
@@ -185,8 +185,10 @@
                                   <div class="social-links">
                                         <a href="#"><i class="fab fa-facebook-f"></i></a>            
                                         <a href="#"><i class="fab fa-twitter"></i></a>            
-                                        <a href="https://github.com/"><i class="fa-brands fa-github"></i></a>            
-                                        <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>            
+                                        <a href="https://github.com/" target="blank">
+                                          <i class="fa-brands fa-github"></i></a>            
+                                        <a href="https://www.linkedin.com/feed/" target="blank">
+                                          <i class="fab fa-linkedin-in"></i></a>            
                                     </div>
                                     </div>
                                     </div>
